<resources>
    <string name="app_name">GPA Calculator</string>
   <string-array name="names">
       <item>CSE</item>
       <item>EEE</item>
       <item>ECE</item>
       <item>MECH</item>
       <item>CIVIL</item>
       <item>IT</item>
   </string-array>
    <string name="semester">Semester</string>
    <string-array name="grades">
        <item>S</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>U</item>
    </string-array>
    <string-array name="cse1">
        <item>Technical English I</item>
       <item>Mathematics I</item>
       <item>Engineering Graphics</item>
       <item>Engineering Physics I</item>
       <item>Engineering Chemistry I</item>
       <item>Computer Programming</item>
        <item>Computer Practices Laboratory</item>
        <item>Engineering Practices Laboratory</item>
        <item>Physics and Chemistry Laboratory</item>
    </string-array>
    <string-array name="cse2">
        <item>Technical English – II</item>
        <item>Mathematics – II</item>
        <item>Engineering Physics – II</item>
        <item>Engineering Chemistry – II</item>
        <item>Digital Principles and System Design</item>
        <item>Programming and Data Structures I</item>
        <item>Digital Laboratory</item>
        <item>Programming and Data Structures Laboratory I</item>
        <item>Physics and Chemistry Laboratory - II</item>
    </string-array>
<string-array name="cse3">
    <item>Transforms and Partial Differential Equations</item>
    <item>Programming and Data Structure II</item>
    <item>Database Management Systems</item>
    <item>Computer Architecture</item>
    <item>Analog and Digital Communication</item>
    <item>Environmental Science and Engineering</item>
    <item>Programming and Data Structure Laboratory II</item>
    <item>Database Management Systems Laboratory</item>

</string-array>
    <string-array name="cse4">
        <item>Probability and Queueing Theory</item>
        <item>Computer Networks</item>
        <item>Operating Systems</item>
        <item>Design and Analysis of Algorithms</item>
        <item>Microprocessor and Microcontroller</item>
        <item>Software Engineering</item>
        <item>Networks Laboratory</item>
        <item>Microprocessor and Microcontroller Laboratory</item>
        <item>Operating Systems Laboratory</item>

    </string-array>
    <string-array name="cse5">
        <item>Discrete Mathematics</item>
        <item>Internet Programming</item>
        <item>Object Oriented Analysis and Design</item>
        <item>Theory of Computation</item>
        <item>Computer Graphics</item>
        <item>Case Tools Laboratory</item>
        <item>Internet Programming Laboratory</item>
        <item>Computer Graphics Laboratory</item>

    </string-array>
    <string-array name="cse6">
        <item>Digital Signal Processing</item>
        <item>Distributed Systems</item>
        <item>Mobile Computing</item>
        <item>Compiler Design</item>
        <item>Artificial Intelligence</item>
        <item>Elective 1</item>
        <item>Mobile Application Development Laboratory</item>
        <item>Compiler Laboratory</item>
        <item>Communication and Soft Skills - Laboratory Based</item>

    </string-array>
    <string-array name="cse7">
        <item>Cryptography and Network Security</item>
        <item>Graph Theory and Applications</item>
        <item>Grid and Cloud Computing</item>
        <item>Resource Management Techniques</item>
        <item>Elective II</item>
        <item>Elective III</item>
        <item>Security Laboratory</item>
        <item>Grid and Cloud Computing Laboratory</item>

    </string-array>
    <string-array name="cse8">
        <item>Project Work</item>
        <item>Multi – Core ArchitectureProgramming</item>
        <item>Elective IV</item>
        <item>Elective V</item>

    </string-array>
    <string-array name="civil2">
        <item>Techincal english 2</item>
        <item>Mathematics 2</item>
        <item>Basic Eng.and Elec. Eng.</item>
        <item>Engineering Mechanics</item>
        <item>Engineering physics 2</item>
        <item>Engineering chemistry 2</item>
        <item>CAD lab</item>
        <item>Physics and chemistry lab</item>
    </string-array>
    <string-array name="civil3">
        <item>Transforms and Partial Differential Equations</item>
        <item>Mechanics of solids</item>
        <item>Environmental Science and engg.</item>
        <item>Engineering Geology</item>
        <item>Mechanics of fluids</item>
        <item>Surveying 1</item>
        <item>survey practical 1</item>
        <item>Computer aided building drawing</item>

    </string-array>
<string-array name="civil4">
    <item>Numerical methods</item>
    <item>Strength of materials</item>
    <item>Applied hydraulic engineering</item>
    <item>Construction materials</item>
    <item>Surveying II</item>
    <item>Soil mechanics</item>
    <item>Strength of materials laboratory</item>
    <item>Hydraulic eng. laboratory</item>
    <item>Surveying practical II</item>
</string-array>
    <string-array name="civil5">
        <item>Structural Analysis I</item>
 		<item>Foundation Engineering</item>
 			<item>Environmental Engineering I</item>
			<item>Highway Engineering</item>
 			<item>Design of Reinforced Concrete Elements</item>
			<item>Construction Techniques, Equipment and Practice</item>
			<item>Communication and Soft skills- Laboratory Based</item>
 			<item>Soil Mechanics Laboratory</item>
 			<item>Survey Camp</item>
    </string-array>
    <string-array name="civil6">
        <item>Structural analysis II</item>
        <item>Design of steel structures</item>
        <item>Design of Reinforced Concrete Brick Masonry Structures</item>
        <item>Railways, Airports and Harbour Engineering</item>
        <item>Environmental Engineering II </item>
        <item>Elective I</item>
        <item>Environmental Engineering Laboratory</item>
        <item>Concrete and Highway Engineering Laboratory</item>
    </string-array>
    <string-array name="civil7">
        <item>Structural Dynamics and Earthquake Engineering</item>
        <item>Prestressed Concrete Structures</item>
        <item>Water Resources and Irrigation Engineering</item>
        <item>Estimation and Quantity Surveying</item>
        <item>Elective II</item>
        <item>Elective III</item>
        <item>CAD and Drafting Laboratory</item>
        <item>Design Project</item>
    </string-array>
    <string-array name="civil8">
        <item>Project Work</item>
        <item>Principles of Management</item>
        <item>Elective IV </item>
        <item>Elective V </item>
        </string-array>
    <string-array name="ece2">
   <item>Technical English – II</item>
    <item>Mathematics – II</item>
    <item>Circuit Theory</item>
    <item>Engineering Physics – II</item>
    <item>Engineering Chemistry – II</item>
    <item>Electronic Devices</item>
    <item>Circuits and Devices Laboratory</item>
    <item>Physics and Chemistry Laboratory - II</item>
    </string-array>
    <string-array name="ece3">
    <item>Transforms and Partial Differential Equations</item>
    <item>Electrical Engineering and Instrumentation</item>
    <item>Signals and Systems</item>
    <item>Electronic Circuits- I</item>
    <item>Object Oriented Programming and Data Structures</item>
    <item>Digital Electronics</item>
    <item>Analog and Digital Circuits Laboratory</item>
    <item>OOPS and Data Structures Laboratory</item>
</string-array>
    <string-array name="ece4">
    <item>Probability and Random Processes</item>
    <item>Electromagnetic Fields</item>
    <item>Electronic Circuits II</item>
    <item>Communication Theory</item>
    <item>Linear Integrated Circuits</item>
    <item>Control System Engineering</item>
    <item>Circuit and Simulation Integrated Laboratory</item>
    <item>Linear Integrated Circuit Laboratory</item>
    <item>Electrical Engineering and Control System Laboratory</item>
</string-array>
    <string-array name="ece5">
    <item>Principles of Digital Signal Processing</item>
    <item>Transmission Lines and Wave Guides</item>
    <item>Digital Communication</item>
    <item>Environmental Science and Engineering</item>
    <item>Microprocessor and Microcontroller</item>
    <item>Digital Signal Processing Laboratory</item>
    <item>Communication System Laboratory</item>
    <item>Microprocessor and Microcontroller Laboratory</item>
    </string-array>
    <string-array name="ece6">
    <item>Principles of Management</item>
        <item>Computer Architecture</item>
        <item>Computer Networks</item>
        <item>VLSI Design</item>
        <item>Antenna and Wave propagation</item>
        <item>Elective - I</item>
        <item>Computer Networks Laboratory</item>
        <item>VLSI Design Laboratory</item>
        <item>Communication and Soft Skills – Laboratory Based</item>
    </string-array>
    <string-array name="ece7">
        <item>RF and Microwave Engineering</item>
        <item>Optical Communication and Networks</item>
        <item>Embedded and Real Time Systems</item>
        <item>Elective – II</item>
        <item>Elective III</item>
        <item>Elective IV</item>
        <item>Embedded Laboratory</item>
        <item>Optical and Microwave Laboratory</item>
</string-array>
<string-array name="ece8">
    <item>Project Work</item>
    <item>Wireless Communication</item>
    <item>Wireless Networks</item>
    <item>Elective V</item>
    <item>Elective VI</item>

    </string-array>
    <string-array name="eee2">
        <item>Technical English - II</item>
        <item>Mathematics - II</item>
        <item>Basic Civil and Mechanical Engineering</item>
        <item>Circuit Theory</item>
        <item>Engineering Physics - II</item>
        <item>Engineering Chemistry - II</item>
        <item>Computer Programming Laboratory</item>
        <item>Electric Circuits Laboratory</item>
        <item>Physics and Chemistry Laboratory - II</item>
    </string-array>
    <string-array name="eee3">
        <item>Transforms and Partial Differential Equations</item>
        <item>Digital Logic Circuits</item>
        <item>Electromagnetic Theory</item>
        <item>Electronic Devices and Circuits</item>
        <item>Environmental Science and Engineering</item>
        <item>Linear Integrated Circuits and Applications</item>
        <item>Electronics Laboratory</item>
        <item>Linear and Digital Integrated Circuits Laboratory</item>
    </string-array>
    <string-array name="eee4">
        <item>Numerical Methods</item>
        <item>Electrical Machines - I</item>
        <item>Object Oriented Programming</item>
        <item>Transmission and Distribution</item>
        <item>Discrete Time Systems and Signal Processing</item>
        <item>Measurements and Instrumentation</item>
        <item>Object Oriented Programming Laboratory</item>
        <item>Electrical Machines Laboratory - I</item>

    </string-array>
    <string-array name="eee5">
        <item>Electrical Machines - II</item>
        <item>Control Systems</item>
        <item>Power System Analysis</item>
        <item>Microprocessors and Microcontrollers</item>
        <item>Power Plant Engineering</item>
        <item>Power Electronics</item>
        <item>Control and Instrumentation Laboratory</item>
        <item>Communication and Soft Skills- Laboratory Based</item>
        <item>Electrical Machines Laboratory - II</item>
    </string-array>
    <string name="anna_university">Anna University</string>
    <string name="gpa_calculator">2013 GPA Calculator</string>
    <string name="button_submit">submit</string>
    <string name="department">Department </string>
</resources>