<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#e6fff9"
   android:backgroundTintMode="screen"
    android:scaleType="center"

    tools:ignore="UnusedAttribute">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/textSize1"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:text="@string/anna_university"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold"
            android:textColor="@android:color/background_dark"
            android:text="@string/gpa_calculator"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/imglogo"
        android:layout_width="match_parent"
        android:layout_height="197dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="174dp"
            android:src="@drawable/ic_android_black_24dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/department"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/semester"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/textSize1"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spin2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:text="@string/button_submit"
        android:textColor="#ffffff"
        android:fontFamily="Roboto bold"
    android:background="#177cb9"/>
</LinearLayout>

